[package]
name = "logic_analyzer_data_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
kingst_data_converter = { path = "../kingst_data_converter" }
